# bitlbee-mattermost

./: .gitignore  .gitmodules  AUTHORS  Makefile.am
mattermost/: Makefile.am  json-builder.c  json-builder.h  json.c  json.h  mattermost-bee.c  mattermost-bee.h  mattermost-http.c  mattermost-http.h  mattermost-lib.c  mattermost-lib.h  mattermost-obj.c  mattermost-obj.h  mattermost.c  mattermost.h
